--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </button>
 
     <audio id="bgMusic" loop>
-        <source src="music/Lovely Piano Song.mp3" type="audio/mpeg">
+        <source src="Lovely Piano Song.mp3" type="audio/mpeg">
     </audio>
 
     <div class="relative main-container">
@@ -37,4 +37,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
